--- a/transacsmonster/public/index.html
+++ b/transacsmonster/public/index.html
@@ -23,7 +23,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <script src="../components/forms/bootstrap.js"></script>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
